feat: create template for form

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,9 @@
       </header>
       <main class="content">
         <section class="todos">
-          <div class="todo-form-container"></div>
+          <div class="todo-form-container">
+            
+          </div>
 
           <ul class="todos__list"></ul>
         </section>
